#summary ChangeLog for releases.

= DDT Change Log =

== DDT 0.9.1 ===
 * UI cleanup: "Interpreter Container" now named "D Standard Library"
 * Fixed issue #20: GDC incluce/d/*/ library location layout not recognized

== DDT 0.9.0 (2013-11-14) ==
 * Issue #13: Added integrated debugging support, using CDT's GDB debugger integration. Supports:
   * Stop/resume program execution. Listing program threads and stack frame contents. 
   * Setting breakpoints, watchpoints (breakpoint on data/variables), tracepoints. Breakpoint conditions.
   * Stack variables inspection view. Expression watch and view. Disassembly view.
   * Non-stop mode (for supported GBDs). Reverse debugging (for supported GDB targets).
   * Most of Eclipse CDT is now a requirement for DDT (for the debugging feature).
 * Fixed issue #19: NPE when opening editor with hyperlinks disabled
 * Fixed issue #17: Assertion failure with cast expression and invalid code in UnaryExpression
 * Changed D perspective icon.

== DDT 0.8.1 (2013-09-23) ==
 * Documentation: added entry in [UserGuide#Eclipse_basics] about Eclipse memory settings optimization.
 * Fixed: Code Completion module list in import declarations now shows the module's DDoc.
 * Implemented: Code Completion now resolves:
   * auto declarations (resolved to the type of the initializer).
   * global type properties (.init, .sizeof, .alignof, etc.)
   * integral properties (.min, .max), float properties(.infinity, .nan, etc.), object properties (.classinfo).
   * static/dynamic array properties (.ptr, .length, .dup, etc.).
   * the type of bool/char/integral/floating/string/array literals (not map array though).
   * parentheses expression.
   * this/super literal expressions.
   * cast expression.
   * new expression.
 * Cleanup: Code Completion now shows no results if invoked after a float token ending in a dot.